# Dream2Flow

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
dream2flow/: camera.py
dream2flow/configs/: direct_shooting_default.yaml  grasp_default.yaml  trajectory_optimizer_default.yaml
dream2flow/examples/: __init__.py  create_3d_flow.py  plan_and_visualize_flow.py
dream2flow/flow/: __init__.py  geometry.py  object_flow.py  object_flow_result.py
dream2flow/flow/depth/: __init__.py  base.py  file_depth_extractor.py  spatracker_depth_extractor.py
dream2flow/flow/generators/: __init__.py  base.py  playback_generator.py  video_flow_generator.py
dream2flow/flow/particle_trackers/: __init__.py  base.py  offline_particle_tracker.py
dream2flow/flow/region_selectors/: __init__.py  grounded_region_selector.py  instruction_processor.py
dream2flow/planner/: base.py  direct_shooting.py  grasp.py  trajectory_optimizer.py
dream2flow/scripts/: __init__.py  _scene_utils.py  create_3d_flow.py  plan_and_visualize_flow.py
dream2flow/video/: base.py  playback.py  veo.py
dream2flow/visualization/: viewer.py
